changes to index and updates to the readme

--- a/index.html
+++ b/index.html
@@ -50,6 +50,11 @@
       <!-- When the user clicks the images within each project they will be taken directly to the deloyed application  -->
       <section id="Work" class="Work" class="card">
         <h2>Work</h2>
+        <a target="blank" href="https://xjessycaz12x.github.io/dog-journal/">
+          <div id="p1-img">
+            <p id="p2">My First Website</p>
+          </div>
+        </a>
 
         <div class="container" id="project-grid">
           <a target="blank" href="">
